--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 "* text=auto" 
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
+厨房衛浴成本.xlsx filter=lfs diff=lfs merge=lfs -text
