--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
 厨房衛浴成本.xlsx filter=lfs diff=lfs merge=lfs -text
+五金工具.xlsx filter=lfs diff=lfs merge=lfs -text
